--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,15 @@
       content="Web site created using create-react-app"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,900;1,100;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>My Portfolio</title>
     <style>
       * {
         font-family: "Roboto", sans-serif;
+        margin: 0;
+        overflow-x: hidden;
       }
     </style>
   </head>
